# libzip

./: fix_cmake_config_h_in.py  meson.build  meson_options.txt
lib/: CMakeLists.txt  gen_zip_err_c.py  meson.build  zip.h  zip_fclose.c  zip_fopen_index_encrypted.c  zip_fread.c  zip_realloc.c  zip_source_accept_empty.c  zip_source_begin_write.c  zip_source_begin_write_cloning.c  zip_source_buffer.c  zip_source_call.c  zip_source_close.c  zip_source_commit_write.c  zip_source_compress.c  zip_source_crc.c  zip_source_file.h  zip_source_file_common.c  zip_source_file_stdio.c  zip_source_file_stdio.h  zip_source_file_stdio_named.c  zip_source_file_win32.c  zip_source_file_win32.h  zip_source_file_win32_named.c  zip_source_free.c  zip_source_get_file_attributes.c  zip_source_layered.c  zip_source_open.c  zip_source_pkware_decode.c  zip_source_pkware_encode.c  zip_source_read.c  zip_source_remove.c  zip_source_rollback_write.c  zip_source_seek.c  zip_source_seek_write.c  zip_source_stat.c  zip_source_supports.c  zip_source_tell.c  zip_source_tell_write.c  (+5 more)
man/: zip_source_function.mdoc
ossfuzz/: meson.build
regress/: fread.c  fread_streams.test  meson.build
src/: meson.build  ziptool.c
